# ghstats

./: .dockerignore  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Makefile  cliff.toml  readme.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml
assets/: app.css
src/: app.css  app.js  collect.rs  db_client.rs  gh_client.rs  helpers.rs  main.rs  pages.rs  state.rs  types.rs  utils.rs
src/routes/: api.rs  html.rs  mod.rs
