[package]
name = "ghstats"
version = "0.3.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
maud = { version = "0.26.0", features = ["axum"] }
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.120"
serde_variant = "0.1.3"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite"] }
thousands = "0.2.0"
tokio = { version = "1.38.1", features = ["full"] }
tokio-cron-scheduler = "0.11.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[lints.rust]
dead_code = "allow"

[profile.dev]
debug = 0

[profile.release]
strip = true
