[package]
name = "ghstats"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
maud = { version = "0.26.0", features = ["axum"] }
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
serde_variant = "0.1.3"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
thousands = "0.2.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[lints.rust]
dead_code = "allow"

[profile.dev]
debug = 0

[profile.release]
strip = true
